@@ -88,6 +88,8 @@ CHANGELOG
 * `autospec` creates a `MagicMock` without a spec for properties and slot
   descriptors, because we don't know the type of object they return
 * Removed the "inherit" argument from `create_autospec`
+* Calling `stop` on an unstarted patcher dies with  a more meaningful error
+  message
 * BUGFIX: `__truediv__` and `__rtruediv__` not available as magic methods on
   mocks in Python 3
 * BUGFIX: `assert_called_with` / `assert_called_once_with` can be used with
